# mypomodoro

./: CLAUDE.md  Cargo.toml  MEMO.md  README.md  build.bat  build.sh
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: release.yml
materials/: icon.afphoto
src/: lib.rs  main.rs
tests/: time_calculation_tests.rs  timer_phase_tests.rs  timer_phase_tests.rs.bak  timer_state_tests.rs
